Package der main-Klasse korrigiert

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,9 @@
 /target/
 /tmp/
 /.settings/
-
+/.classpath
+/.project
+dependency-reduced-pom.xml
 
 # Compiled class file
 *.class
@@ -28,6 +30,3 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
-/.classpath
-/.project
-/.dependency-reduced-pom.xml
